# sonic-swss

./: .gitignore  Cargo.toml  azure-pipelines.yml
.azure-pipelines/: azure-pipelines-build.yml  build-docker-sonic-vs-template.yml  build-template.yml  build_and_install_module.sh  gcov.yml  test-docker-sonic-vs-template.yml
.azure-pipelines/docker-sonic-vs/: Dockerfile
.github/: CODEOWNERS
cfgmgr/: buffer_pool_mellanox.lua  buffermgr.cpp  buffermgrdyn.cpp  buffermgrdyn.h  intfmgr.cpp  intfmgr.h  macsecmgr.cpp  portmgr.cpp  stpmgr.cpp  stpmgr.h  stpmgrd.cpp  vlanmgr.cpp
crates/countersyncd/: Cargo.toml
crates/countersyncd/src/: lib.rs  main.rs
crates/countersyncd/src/actor/: control_netlink.rs  counter_db.rs  data_netlink.rs  ipfix.rs  mod.rs  stats_reporter.rs  swss.rs
crates/countersyncd/src/message/: buffer.rs  ipfix.rs  mod.rs  netlink.rs  saistats.rs  swss.rs
crates/countersyncd/src/sai/: mod.rs  saibuffer.rs  saiport.rs  saiqueue.rs  saitypes.rs
crates/countersyncd/tests/: integration_test.rs  test_common.rs
crates/countersyncd/tests/data/: constants.yml
debian/: rules  swss.install
fpmsyncd/: Makefile.am  fpmlink.cpp  fpmsyncd.cpp  routesync.cpp  routesync.h
lib/: orch_zmq_config.cpp  orch_zmq_config.h
mclagsyncd/: mclaglink.cpp  mclaglink.h
neighsyncd/: neighsync.cpp
orchagent/: Makefile.am  aclorch.cpp  aclorch.h  bfdorch.cpp  bfdorch.h  bufferorch.cpp  bufferorch.h  bulker.h  copporch.cpp  copporch.h  crmorch.cpp  crmorch.h  debugcounterorch.cpp  debugcounterorch.h  drop_monitor.lua  fabricportsorch.cpp  fabricportsorch.h  fdborch.cpp  fgnhgorch.cpp  fgnhgorch.h  flexcounterorch.cpp  flexcounterorch.h  icmporch.cpp  icmporch.h  intfsorch.cpp  lagids.lua  main.cpp  mplsrouteorch.cpp  muxorch.cpp  muxorch.h  neighorch.cpp  neighorch.h  nexthopgroupkey.h  nexthopkey.cpp  nexthopkey.h  nhgorch.cpp  notifications.cpp  notifications.h  notifier.h  nvda_port_trim_drop.lua  (+34 more)
orchagent/buffer/: buffercontainer.h  bufferhelper.cpp  bufferhelper.h  bufferschema.h
orchagent/dash/: dashaclgroupmgr.cpp  dashaclgroupmgr.h  dashaclorch.cpp  dashaclorch.h  dashenifwdinfo.cpp  dashenifwdorch.cpp  dashenifwdorch.h  dashhaorch.cpp  dashhaorch.h  dashmeterorch.cpp  dashmeterorch.h  dashorch.cpp  dashorch.h  dashportmaporch.cpp  dashportmaporch.h  dashrouteorch.cpp  dashrouteorch.h  dashtagmgr.cpp  dashtagmgr.h  dashtunnelorch.cpp  dashtunnelorch.h  dashvnetorch.cpp  dashvnetorch.h  pbutils.cpp  pbutils.h
orchagent/flex_counter/: flex_counter_manager.cpp  flex_counter_manager.h
orchagent/high_frequency_telemetry/: counternameupdater.cpp  counternameupdater.h  hftelgroup.cpp  hftelgroup.h  hftelorch.cpp  hftelorch.h  hftelprofile.cpp  hftelprofile.h  hftelutils.cpp  hftelutils.h
orchagent/p4orch/: acl_rule_manager.cpp  acl_rule_manager.h  acl_table_manager.cpp  acl_table_manager.h  acl_util.cpp  acl_util.h  ext_tables_manager.cpp  ext_tables_manager.h  gre_tunnel_manager.cpp  gre_tunnel_manager.h  l3_admit_manager.cpp  l3_admit_manager.h  mirror_session_manager.cpp  mirror_session_manager.h  neighbor_manager.cpp  neighbor_manager.h  next_hop_manager.cpp  next_hop_manager.h  object_manager_interface.h  p4oidmapper.cpp  p4oidmapper.h  p4orch.cpp  p4orch.h  p4orch_util.cpp  p4orch_util.h  route_manager.cpp  route_manager.h  router_interface_manager.cpp  router_interface_manager.h  tables_definition_manager.cpp  tables_definition_manager.h  wcmp_manager.cpp  wcmp_manager.h
portsyncd/: linksync.cpp
swssconfig/: Makefile.am  swssconfig.cpp  swssplayer.cpp
tests/: README.md  buffer_model.py  conftest.py  request_parser_ut.cpp  sai_attrs.py  test_acl_inner_src_mac_rewrite.py  test_buffer_dynamic.py  test_buffer_traditional.py  test_copp.py  test_fgnhg.py  test_flex_counters.py  test_hash.py  test_hft.py  test_icmp_echo.py  test_interface.py  test_macsec.py  test_mclag_fdb.py  test_mirror.py  test_mirror_port_erspan.py  test_mirror_port_span.py  test_mux.py  test_nhg.py  test_port.py  test_port_add_remove.py  test_port_unlos.py  test_portchannel.py  test_qos_map.py  test_route.py  test_soft_bfd.py  test_srv6.py  test_sub_port_intf.py  test_trimming.py  test_virtual_chassis.py  test_vlan.py  test_vnet.py  test_warm_reboot.py  test_zmq.py  vnet_lib.py
(+101 files in other folders)
